force-app/main/default/objects/Credit_Risk_Comitee__c/Credit_Risk_Comitee__c.object-meta.xml
<CustomObject>
    <description>For credit risk committee with comment next step and status</description>
    <label>Credit Risk Committee</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Credit Risk Comitee  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Risk Committees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>