force-app/main/default/objects/Credit_Risk_Comitee__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <description>Buyer Name</description>
    <formula>Supplier_Buyer_Map__r.Buyer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Buyer Name</inlineHelpText>
    <label>Buyer</label>
    <type>Text</type>
</CustomField>