force-app/main/default/objects/Credit_Risk_Comitee__c/fields/Conclusion_or_Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Conclusion_or_Next_Step__c</fullName>
    <description>Conclusion or next step</description>
    <inlineHelpText>Conclusion or next step ( document missing , need for a new risk comittee</inlineHelpText>
    <label>Conclusion or Next Step</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>