force-app/main/default/objects/Credit_Risk_Comitee__c/fields/Date_of_Next_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Next_Review__c</fullName>
    <description>Date of next review (if Needed)</description>
    <inlineHelpText>Date of next review (if Needed)</inlineHelpText>
    <label>Date of Next Review</label>
    <type>Date</type>
</CustomField>