force-app/main/default/objects/Credit_Risk_Comitee__c/fields/Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_date__c</fullName>
    <description>Date when the Conclusion must be reviewed</description>
    <inlineHelpText>Date when the Conclusion must be reviewed</inlineHelpText>
    <label>Expiration date</label>
    <type>Date</type>
</CustomField>