force-app/main/default/objects/Credit_Risk_Comitee__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <description>Supplier Name</description>
    <formula>Supplier_Buyer_Map__r.Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Supplier Name</inlineHelpText>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>