force-app/main/default/objects/Credit_Risk_Comitee__c/fields/Supplier_Comment__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Comment__c</fullName>
    <description>Credit Committee Comment about Supplier</description>
    <inlineHelpText>Credit Committee Comment about Supplier</inlineHelpText>
    <label>Supplier Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>