force-app/main/default/objects/Credit_Risk_Comitee__c/fields/Trade_Comment__c.field-meta.xml
<CustomField>
    <fullName>Trade_Comment__c</fullName>
    <label>Trade Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>